--- a/data/pascal/README
+++ b/data/pascal/README
@@ -1,1 +1,2 @@
 Features of Pascal Sentence Dataset
+C. Rashtchian, P. Young, M. Hodosh, and J. Hockenmaier. Collecting image annotations using amazon’s mechanical turk. In Proceedings of the NAACL HLT 2010 Workshop on Creating Speech and Language Data with Amazon’s Mechanical Turk, pages 139–147, Stroudsburg, PA, USA, 2010. Association for Computational Linguistics.
